# site-roast

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
site_roast/: __init__.py  __main__.py  auditor.py  cli.py  reporter.py  roaster.py  scores.py
tests/: __init__.py  test_site_roast.py
